# Chimera

./: LICENSE  README.md  pyproject.toml  setup.py
chimera/: __init__.py  chimera.py
examples/py/: abcplusreverse.py
examples/sprite3/: Chimera Client.sprite3
